# rust-collection

./: Cargo.toml
src/: lib.rs  list.rs  nodes.rs  traits.rs
src/list/: linked_list.rs  linked_list_iterator.rs  queue.rs  stack.rs
src/nodes/: list_node.rs  node.rs  queue_node.rs
src/traits/: collection.rs  list.rs
